--- a/cartstyle.css
+++ b/cartstyle.css
@@ -1,6 +1,7 @@
 body {
     background-color: #F6F4E8;
     color:5E5D5D;
+    font-family: 'Roboto', sans-serif;
 }
 
 .rongboxborder {
@@ -41,7 +42,7 @@ body {
     color: black;
     font-weight: 700;
     font-size: 15px;
-    background-color: #F6F4E8;
+    background-color:  #ac9789;
     padding: 17px 60px;
     margin: 0 10px;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.20);
@@ -50,6 +51,7 @@ body {
 .btn span {
     position: relative;
     z-index: 1;
+    color: #fff;
 }
 
 .btn:after {
@@ -59,7 +61,7 @@ body {
     top: 0;
     height: 490%;
     width: 140%;
-    background: #E59560;
+    background: #042c0e;
     -webkit-transition: all .5s ease-in-out;
     transition: all .5s ease-in-out;
     -webkit-transform: translateX(-98%) translateY(-25%) rotate(45deg);
@@ -155,4 +157,54 @@ body {
 }
 .red{
     color: red;
+}
+.rongdash{
+    border-top: 1px dashed #CCC ;
+    /* position: relative; */
+}
+.rongorderlist{
+    background-color: #BACEC1;
+    width: 150px;
+    text-align: center;
+    /* position: absolute; */
+    color: #fff;
+  
+}
+.bo {
+ margin-bottom: -30px;
+}
+.size {
+    padding-top: 10px;
+    font-size: 0.9rem;
+    color: rgba(0, 0, 0, 0.541);
+}
+.rongorder2{
+    background-color: #CCC;
+    padding: 10px;
+    padding-left: 40px;
+    /* text-align: center; */
+    font-size: 1.4rem;
+}
+.footer img {
+    width:50%;
+    /* height: 70px; */
+    margin-top: px;
+}
+.footer{
+    background-color:#1D3124 ;
+}
+.white{
+    color: #FFF;
+}
+.footer h5{
+    /* font-size: 2rem; */
+}
+.footer i {
+    margin-left: 20px;
+    margin-right: 30px;
+    margin-top: 30px;
+    font-size: 2rem;
+}
+td{
+    margin: auto;
 }
